--- a/composer.json
+++ b/composer.json
@@ -21,9 +21,9 @@
   ],
   "require": {
     "php": ">=7.3",
-    "illuminate/support": "^8.0",
-    "illuminate/config": "^8.0",
-    "illuminate/view": "^8.0",
+    "illuminate/support": "^8.0|^9.0|^10.0",
+    "illuminate/config": "^8.0|^9.0|^10.0",
+    "illuminate/view": "^8.0|^9.0|^10.0",
     "laravelcollective/html": "6.2.*"
   },
   "require-dev": {
